fixed the scale issue, however there comes up with the .file-wrap position issue

--- a/css/works/webservice/canvas-eve/canvas-eve.css
+++ b/css/works/webservice/canvas-eve/canvas-eve.css
@@ -17,8 +17,8 @@
 #zoom {
     width: 100%;
     height: 100%;
-    position: absolute;
-    transform-origin: left top;
+    position: relative;
+    /* transform-origin: right bottom; */
     transform: scale(1);
 
     background: rgba(255, 0, 0, 0.2);
